# juncture

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh.md  TECHNICAL_DESIGN_CONFORMANCE_REPORT.md  findings.md  progress.md  task_plan.md
.claude/rules/: cargo.md  rust-code-style.md  test_principle.md
.claude/skills/rust-concurrency/: SKILL.md
benchmarks/: CLAUDE.md  Cargo.toml  README.md  results_rust.json
benchmarks/benches/: checkpoint.rs  conditional_routing.rs  fanout.rs  sequential.rs  streaming.rs  wide_state.rs
benchmarks/python/: bench_utils.py  checkpoint.py  conditional_routing.py  fanout.py  pyproject.toml  results_python_checkpoint.json  results_python_conditional_routing.json  results_python_fanout.json  results_python_sequential.json  results_python_streaming.json  results_python_wide_state.json  sequential.py  streaming.py  wide_state.py
benchmarks/scripts/: compare.py  run_all.sh
benchmarks/src/: lib.rs  profiling.rs
crates/juncture/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-checkpoint/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-checkpoint/src/: cache.rs  error.rs  lib.rs  memory.rs  postgres.rs  serde.rs  sqlite.rs  types.rs
crates/juncture-core/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-core/src/: chat.rs  checkpoint.rs  client.rs  command.rs  config.rs  error.rs  lib.rs  llm.rs  observability.rs  prebuilt.rs  runtime.rs  send.rs  store.rs  stream.rs  subgraph.rs  time.rs  tools.rs  tracing_wasm.rs  wasm_send.rs
crates/juncture-core/src/edge/: compiled.rs  mod.rs  types.rs
crates/juncture-core/src/func/: mod.rs
crates/juncture-core/src/graph/: builder.rs  compiled.rs  mod.rs  remote.rs  topology.rs
crates/juncture-core/src/interrupt/: context.rs  mod.rs
crates/juncture-core/src/node/: into_node.rs  mod.rs  trait.rs
crates/juncture-core/src/pregel/: budget.rs  context.rs  durability.rs  loop_.rs  mod.rs  protocol.rs  runner.rs  scheduler.rs  stream.rs  types.rs
crates/juncture-core/src/state/: channel.rs  messages.rs  mod.rs  trait_.rs
crates/juncture-core/tests/: derive_state.rs  edge_tests.rs  fanout_perf_test.rs  interrupt_tests.rs  node_tests.rs  runtime_tests.rs
crates/juncture-derive/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-derive/src/: lib.rs  state_derive.rs
crates/juncture-store/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-store/src/: error.rs  filter.rs  lib.rs  memory.rs  trait_.rs  types.rs
crates/juncture-telemetry/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-telemetry/src/: batch_writer.rs  collector.rs  config.rs  langfuse.rs  lib.rs  models.rs  sqlite_store.rs  trace_store.rs
crates/juncture-telemetry/src/otlp/: http.rs  mod.rs
crates/juncture-telemetry/src/web/: api.rs  dashboard.rs  mod.rs
crates/juncture-telemetry/tests/: e2e.rs
crates/juncture-tracing/: CLAUDE.md  Cargo.toml  README.md
crates/juncture-tracing/src/: callback.rs  config.rs  debug.rs  lib.rs  metrics.rs  propagation.rs  spans.rs  test_utils.rs  types.rs
crates/juncture/src/: lib.rs
crates/juncture/src/llm/: anthropic.rs  circuit_breaker.rs  message.rs  middleware.rs  mock.rs  mod.rs  ollama.rs  openai.rs  pricing.rs  retry.rs  structured.rs  trait_.rs
crates/juncture/src/memory/: conversation.rs  fact.rs  mod.rs  summarizer.rs
crates/juncture/src/prebuilt/: agent_factory.rs  agent_middleware.rs  messages_state.rs  mod.rs  react.rs  subagent.rs
crates/juncture/src/tools/: condition.rs  error.rs  interceptor.rs  mod.rs  node.rs  permission.rs  runtime.rs  trait_.rs  transformer.rs  validation.rs
crates/juncture/src/tools/builtin/: mod.rs  think.rs  web_fetch.rs
crates/juncture/tests/: budget_tracking_integration.rs  tools_integration.rs
design/: 01-state-channel.md  02-graph-builder.md  03-pregel-engine.md  04-checkpoint.md  05-streaming.md  06-hitl.md  07-subgraph.md  08-llm-tools.md  09-observability.md  10-store.md  11-wasm.md  MAPPING_SUMMARY.md  index.md
design/checklists/: 01-state-channel.json  02-graph-builder.json  03-pregel-engine.json  04-checkpoint.json  05-streaming.json  06-hitl.json  07-subgraph.json  08-llm-tools.json  09-observability.json  10-store.json
doc/: README.md
doc/en/: advanced-features.md  core-concepts.md  examples-guide.md  getting-started.md
doc/zh/: advanced-features.md  core-concepts.md  examples-guide.md  getting-started.md
docker/telemetry/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
examples/: CLAUDE.md  Cargo.toml
examples/deep-research/: CLAUDE.md  Cargo.toml
examples/deep-research/src/: config.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  permissions.rs  state.rs
examples/deep-research/src/agents/: mod.rs  planner.rs  researcher.rs  writer.rs
examples/deep-research/src/memory/: conversation.rs  extractor.rs  mod.rs  store.rs
examples/deep-research/src/tools/: calculator.rs  file_io.rs  memory_search.rs  mod.rs  web_search.rs
examples/deep-research/tests/: integration_tests.rs
examples/src/: 01_state_machine.rs  02_counter_reducers.rs  03_conditional_routing.rs  04_chat_basic.rs  05_tool_calling.rs  06_streaming.rs  07_human_in_the_loop.rs  08_checkpoint_resume.rs  09_error_recovery.rs  10_basic_chat.rs  11_streaming_chat.rs  12_tool_calling.rs  13_react_agent.rs  14_multi_turn.rs  15_structured_output.rs  16_juncture_telemetry.rs  17_circuit_breaker.rs  18_fallback_node.rs  19_resource_limits.rs  20_health_check.rs  21_ring_buffer_channel.rs  22_graph_visualization.rs  common.rs  telemetry_demo.rs
examples/wasm-edge-cli/: Cargo.toml
examples/wasm-edge-cli/src/: main.rs
examples/wasm-edge-server/: Cargo.toml  spin.toml
examples/wasm-edge-server/src/: lib.rs
examples/wasm-example/: Cargo.toml  index.html  serve.py
examples/wasm-example/src/: lib.rs
review/: 01-state-channel.md  02-graph-builder.md  03-pregel-engine.md  04-checkpoint.md  05-streaming.md  06-hitl.md  07-subgraph.md  08-llm-tools.md  09-observability.md  10-store.md  findings.md
scripts/: hook-stop-verify.sh  hook-verify-rs.sh  verify-design-coverage.py  verify-telemetry.sh
(+34 files in other folders)
