[package]
name = "juncture-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
juncture-core = { path = "../crates/juncture-core" }
juncture-derive = { path = "../crates/juncture-derive" }
juncture-checkpoint = { path = "../crates/juncture-checkpoint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio", "async_futures"] }
rand = "0.8"

[lints]
workspace = true

[[bin]]
name = "profile"
path = "src/bin/profile.rs"

[[bench]]
name = "sequential"
harness = false

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "wide_state"
harness = false

[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "conditional_routing"
harness = false

[[bench]]
name = "streaming"
harness = false
