[package]
name = "juncture-simple-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Simple examples demonstrating Juncture graph execution patterns"

[dependencies]
juncture = { path = "../crates/juncture", features = ["openai"] }
juncture-core = { path = "../crates/juncture-core" }
juncture-derive = { path = "../crates/juncture-derive" }
juncture-checkpoint = { path = "../crates/juncture-checkpoint" }
juncture-tracing = { path = "../crates/juncture-tracing", features = ["otel"] }
juncture-telemetry = { path = "../crates/juncture-telemetry", features = ["web"] }
opentelemetry = "0.27"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = "0.4"

[[bin]]
name = "01_state_machine"
path = "src/01_state_machine.rs"

[[bin]]
name = "02_counter_reducers"
path = "src/02_counter_reducers.rs"

[[bin]]
name = "03_conditional_routing"
path = "src/03_conditional_routing.rs"

[[bin]]
name = "04_chat_basic"
path = "src/04_chat_basic.rs"

[[bin]]
name = "05_tool_calling"
path = "src/05_tool_calling.rs"

[[bin]]
name = "06_streaming"
path = "src/06_streaming.rs"

[[bin]]
name = "07_human_in_the_loop"
path = "src/07_human_in_the_loop.rs"

[[bin]]
name = "08_checkpoint_resume"
path = "src/08_checkpoint_resume.rs"

[[bin]]
name = "09_error_recovery"
path = "src/09_error_recovery.rs"

[[bin]]
name = "10_basic_chat"
path = "src/10_basic_chat.rs"

[[bin]]
name = "11_streaming_chat"
path = "src/11_streaming_chat.rs"

[[bin]]
name = "12_tool_calling"
path = "src/12_tool_calling.rs"

[[bin]]
name = "13_react_agent"
path = "src/13_react_agent.rs"

[[bin]]
name = "14_multi_turn"
path = "src/14_multi_turn.rs"

[[bin]]
name = "15_structured_output"
path = "src/15_structured_output.rs"

[[bin]]
name = "telemetry_demo"
path = "src/telemetry_demo.rs"

[[bin]]
name = "16_juncture_telemetry"
path = "src/16_juncture_telemetry.rs"

[[bin]]
name = "17_circuit_breaker"
path = "src/17_circuit_breaker.rs"

[[bin]]
name = "18_fallback_node"
path = "src/18_fallback_node.rs"

[[bin]]
name = "19_resource_limits"
path = "src/19_resource_limits.rs"

[[bin]]
name = "20_health_check"
path = "src/20_health_check.rs"

[[bin]]
name = "21_ring_buffer_channel"
path = "src/21_ring_buffer_channel.rs"

[[bin]]
name = "22_graph_visualization"
path = "src/22_graph_visualization.rs"

[lints]
workspace = true
