[project]
name = "juncture-bench-python"
version = "0.1.0"
description = "Python benchmark counterpart for Juncture vs LangGraph comparison"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.1",
    "langchain-core>=1.4.0",
    "pyperf>=2.8",
    "uvloop>=0.21",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"