[package]
name = "juncture-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types and traits for Juncture state machine framework"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v6"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.9"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"], optional = true }
opentelemetry = { version = "0.27", optional = true }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "chrono"] }

# Browser-only: wasm32-unknown-unknown
# On browser WASM, reqwest uses Fetch API (wasm-bindgen). Remove rustls-tls
# (unused in browser) and add browser-specific dependencies.
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
web-time = "1"

[features]
default = []
multi-thread = ["tokio/rt-multi-thread"]
wasm = ["uuid/js"]
otel = ["opentelemetry"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
chat = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
juncture-derive = { version = "0.1.0", path = "../juncture-derive" }

[lints]
workspace = true
