[package]
name = "juncture-store"
version.workspace = true
edition.workspace = true
description = "Cross-thread persistent key-value storage for Juncture"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }

[features]
vector = []

[lints]
workspace = true
