[package]
name = "juncture-store"
version.workspace = true
edition.workspace = true
description = "Cross-thread persistent key-value storage for Juncture (re-exports juncture-core::store)"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
juncture-core = { path = "../juncture-core" }

[lints]
workspace = true
