[package]
name = "juncture-tracing"
version.workspace = true
edition.workspace = true
description = "OpenTelemetry integration and tracing for Juncture applications"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
otel = []  # Future: add opentelemetry deps when ready

[dependencies]
juncture-core = { path = "../juncture-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
