[package]
name = "juncture-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OpenTelemetry integration and tracing for Juncture applications"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
otel = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]

[dependencies]
juncture-core = { version = "0.1.0", path = "../juncture-core", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenTelemetry dependencies (feature-gated)
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "http-proto", "reqwest-client"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
