[package]
name = "juncture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Typed state machine framework for LLM agents - Rust implementation of LangGraph"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
juncture-core = { version = "0.2.0", path = "../juncture-core", default-features = false, features = ["chat"] }
juncture-derive = { version = "0.2.0", path = "../juncture-derive" }
juncture-store = { version = "0.2.0", path = "../juncture-store", optional = true }
juncture-tracing = { version = "0.2.0", path = "../juncture-tracing" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v6"] }
tracing = "0.1"

# Provider dependencies (feature-gated)
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
bytes = { version = "1", optional = true }
schemars = { version = "0.8", optional = true }

[features]
default = ["multi-thread"]
multi-thread = ["juncture-core/multi-thread"]
anthropic = ["dep:reqwest", "dep:bytes"]
openai = ["dep:reqwest", "dep:bytes"]
ollama = ["dep:reqwest", "dep:bytes"]
reqwest = ["dep:reqwest", "dep:bytes"]
structured-output = ["schemars"]
store = ["juncture-store"]
wasm = ["juncture-core/wasm"]

[lints]
workspace = true
