[package]
name = "deep-research"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-agent research assistant built with Juncture"

[dependencies]
juncture = { path = "../../crates/juncture", features = ["openai"] }
juncture-core = { path = "../../crates/juncture-core" }
juncture-derive = { path = "../../crates/juncture-derive" }
juncture-checkpoint = { path = "../../crates/juncture-checkpoint" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
futures = "0.3"
regex = "1"

[lints]
workspace = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
