[workspace]

[package]
name = "wasm-edge-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greatwallisme/juncture"
description = "WASI CLI example demonstrating Juncture agent with real LLM interaction"

[[bin]]
name = "wasm-edge-cli"
path = "src/main.rs"

[dependencies]
juncture-core = { path = "../../crates/juncture-core", default-features = false }
juncture-derive = { path = "../../crates/juncture-derive" }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v6"] }
