[workspace]

[package]
name = "wasm-example"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greatwallisme/juncture"
description = "WASM example demonstrating Juncture graph execution in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
juncture = { path = "../../crates/juncture", default-features = false, features = ["wasm", "openai"] }
juncture-core = { path = "../../crates/juncture-core", default-features = false, features = ["wasm", "chat"] }
juncture-derive = { path = "../../crates/juncture-derive" }
futures = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
